# localization

./: Readme.md
api/: Cargo.toml  Dockerfile
api/src/: database.sql  main.rs  web.rs
api/src/controllers/: languages.rs  mod.rs  pages.rs  translation_page.rs
api/src/domain/: languages.rs  mod.rs  pages.rs  translations.rs
api/src/infrastructure/: mod.rs  mysql_language_repository.rs  mysql_page_repository.rs  mysql_translation_page_repository.rs
app/: Dockerfile  next.config.mjs  package-lock.json  package.json
app/src/app/: globals.scss  layout.tsx
app/src/app/[[...page]]/: page.module.scss  page.tsx
app/src/app/languages/: page.tsx
app/src/client/: TranslationClient.ts  index.ts  useServerClient.ts
app/src/components/: LanguagesLayout.tsx  LiteralList.tsx  LiteralRow.tsx  Navbar.tsx  PageList.tsx
client/: Cargo.toml
client/src/: cached_client.rs  client.rs  lib.rs  translation_page.rs
