[package]
name = "localization_client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
